--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -103,7 +103,7 @@
       $size: clamp(px-to-rems(16px), 5vw, px-to-rems(36px)),
       $l-height: 1.4,
       $f-weight: 400,
-      $color: var(--clr-text-color)
+      $color: var(--clr-text-light)
     );
     @include mq("md") {
       @include text-prop(
